--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -4,15 +4,14 @@
   bind 0.0.0.0
 </source>
 
-<match docker.*>
+<match docker.*.*>
 @type copy
 
   <store>
     @type file
-    path /tmp/log/fluent/${tag[1]}
+    path /tmp/log/fluent/${tag[1]}/${tag[2]}
     <buffer tag,time>
       flush_at_shutdown   true
-      flush_interval      60s
       compress            text
     </buffer>
     <format>
