Implement log aggregation with fluentd.

--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -9,8 +9,10 @@
 
   <store>
     @type file
-    path /tmp/log/fluent/${tag[1]}/${tag[2]}
+    path /tmp/log/fluentd/${tag[1]}/${tag[2]}
     <buffer tag,time>
+      flush_mode          interval
+      flush_interval      60s
       flush_at_shutdown   true
       compress            text
     </buffer>
